[Nav Experiment] Load placeholder URL in |loadErrorInNativeView:|.

Native error view is triggered when a pending item can't be loaded due
to network error. It is handled by commiting the pending item and
activating the native controller. With WKBasedNavigationManager, the
commit step needs a WKBackForwardListItem in order to commit the pending
item. Injecting a placeholder URL into WKWebView fixes this problem.

Because any URL can trigger a native error view, I also removed the
assertions checking that the URL encoded in a placeholder URL is always
an app-specific URL.

This fixes the following egtest failures:
TabUsageRecorderTest/testOpenFromApp
NavigationTestCase/testHistoryForwardToErrorPage
NavigationTestCase/testHistoryBackNavigation
NavigationTestCase/testWindowLocationReplaceAndChangeHash

Bug: 784951
Change-Id: Ie4f61087301774340981ba3661740b1f4e103a1e