ios/web/web_state/ui/crw_web_controller.mm
@@ -1686,10 +1686,6 @@ registerLoadRequestForURL:(const GURL&)requestURL
 
 - (void)loadErrorInNativeView:(NSError*)error
             navigationContext:(web::NavigationContextImpl*)context {
-  [self removeWebView];
-  web::NavigationItem* item = self.currentNavItem;
-  const GURL currentURL = item ? item->GetVirtualURL() : GURL::EmptyGURL();
-
   if (web::IsWKWebViewSSLCertError(error)) {
     // This could happen only if certificate is absent or could not be parsed.
     error = web::NetErrorFromError(error, net::ERR_SSL_SERVER_CERT_BAD_FORMAT);
@@ -1702,11 +1698,25 @@ registerLoadRequestForURL:(const GURL&)requestURL
     error = web::NetErrorFromError(error);
   }
 
-  BOOL isPost = [self isCurrentNavigationItemPOST];
-  [self setNativeController:[_nativeProvider controllerForURL:currentURL
-                                                    withError:error
-                                                       isPost:isPost]];
-  [self loadNativeViewWithSuccess:NO navigationContext:context];
+  ProceduralBlock finishLoadErrorInNativeView = ^{
+    web::NavigationItem* item = self.currentNavItem;
+    const GURL currentURL = item ? item->GetVirtualURL() : GURL::EmptyGURL();
+    BOOL isPost = [self isCurrentNavigationItemPOST];
+    [self setNativeController:[_nativeProvider controllerForURL:currentURL
+                                                      withError:error
+                                                         isPost:isPost]];
+    [self loadNativeViewWithSuccess:NO navigationContext:context];
+  };
+
+  if (!web::GetWebClient()->IsSlimNavigationManagerEnabled()) {
+    [self removeWebView];
+    finishLoadErrorInNativeView();
+  } else {
+    web::NavigationItem* item = self.currentNavItem;
+    DCHECK(item);
+    [self loadPlaceholderInWebViewForURL:item->GetVirtualURL()
+                       completionHandler:finishLoadErrorInNativeView];
+  }
 }
 
 // Loads the current URL in a native controller if using the legacy navigation
@@ -1751,8 +1761,7 @@ registerLoadRequestForURL:(const GURL&)requestURL
 - (void)loadPlaceholderInWebViewForURL:(const GURL&)originalURL
                      completionHandler:(ProceduralBlock)completionHandler {
   web::WebClient* webClient = web::GetWebClient();
-  DCHECK(webClient->IsSlimNavigationManagerEnabled() &&
-         webClient->IsAppSpecificURL(originalURL));
+  DCHECK(webClient->IsSlimNavigationManagerEnabled());
 
   GURL placeholderURL = CreatePlaceholderUrlForUrl(originalURL);
   [self ensureWebViewCreated];
@@ -4238,9 +4247,7 @@ registerLoadRequestForURL:(const GURL&)requestURL
   if (web::GetWebClient()->IsSlimNavigationManagerEnabled() &&
       IsPlaceholderUrl(webViewURL)) {
     GURL originalURL = ExtractUrlFromPlaceholderUrl(webViewURL);
-    if (!originalURL.is_valid() ||
-        !web::GetWebClient()->IsAppSpecificURL(originalURL)) {
-      // Encoded URL is not a recognized app-specific URL. Abort to be safe.
+    if (!originalURL.is_valid()) {
       [self abortLoad];
       return;
     }
